# altered-riddles

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HF_README.md  README.md  REPORT.md  pyproject.toml  requirements.txt
data/: benchmark.jsonl  model_metadata.json  riddles_source.csv  riddles_source.txt
hf/: HF_README.md  benchmark.jsonl  clean_benchmark.py
migrations/: 20260403_update_model_outputs_pq.py
prompts/: altered_riddles_prompt.txt  generation.j2  judge.j2  riddles.txt  solve.j2  validation.j2
results/: LEADERBOARD.md  all_results.json  alteration_type_stats.json  anthropic_claude-opus-4.6_temp1.0_reasoning-high_eval.json  anthropic_claude-opus-4.7_temp1.0_reasoning-high_eval.json  anthropic_claude-sonnet-4.6_temp1.0_reasoning-high_eval.json  gemma-4-26b-a4b-it_temp1.0_eval.json  gemma-4-31b-it_temp1.0_eval.json  google_gemma-4-26b-a4b-it_temp1.0_eval.json  google_gemma-4-26b-a4b-it_temp1.0_reasoning-high_eval.json  google_gemma-4-31b-it_temp1.0_eval.json  google_gemma-4-31b-it_temp1.0_reasoning-high_eval.json  leaderboard.json  leaderboard.json.bak  lfm2-24b-a2b_temp0.1_eval.json  liquidai_lfm2-24b-a2b_temp0.1_eval.json  minimaxai_minimax-m2.7_temp1.0_reasoning-high_eval.json  mistral-small-2603_temp0.7_reasoning-high_eval.json  mistralai_mistral-small-2603_temp0.7_eval.json  mistralai_mistral-small-2603_temp0.7_reasoning-high_eval.json  moonshotai_kimi-k2.5_temp0.6_eval.json  moonshotai_kimi-k2.5_temp1.0_reasoning-high_eval.json  moonshotai_kimi-k2.6_temp1.0_reasoning-high_eval.json  openai_gpt-5.4-mini_temp1.0_eval.json  sanity.json  (+13 more)
(+134 files in other folders)
